backend/agent/crates/foolrs-providers/src/snapshots/foolrs_providers__openai__tests__openai_with_tools.snap
---
source: crates/foolrs-providers/src/openai.rs
expression: provider.build_request_body(&request)
---
{
  "max_tokens": 8192,
  "messages": [
    {
      "content": "You are a test assistant.",
      "role": "system"
    },
    {
      "content": "go",
      "role": "user"
    }
  ],
  "model": "test-model",
  "stream": true,
  "stream_options": {
    "include_usage": true
  },
  "tools": [
    {
      "function": {
        "description": "Read a file",
        "name": "read",
        "parameters": {
          "$schema": "https://json-schema.org/draft/2020-12/schema",
          "properties": {
            "path": {
              "type": "string"
            }
          },
          "required": [
            "path"
          ],
          "type": "object"
        }
      },
      "type": "function"
    },
    {
      "function": {
        "description": "List dir",
        "name": "list",
        "parameters": {
          "$schema": "https://json-schema.org/draft/2020-12/schema",
          "properties": {},
          "type": "object"
        }
      },
      "type": "function"
    }
  ]
}
